--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="action_settings">Settings</string>
+    <string name="access_token">pk.eyJ1IjoiczE2MDM0NTkiLCJhIjoiY2pucml1cjQzMDgyZzN2bGxhZjl4aHV2eSJ9.OZvYlGNGkHUEW_xUX9BNNA</string>
+    <string name="start_navigating">Start Navigating</string>
+    <!--<string name="action_settings">Settings</string>-->
 </resources>
