--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Coinz</string>
     <string name="access_token">pk.eyJ1IjoiczE2MDM0NTkiLCJhIjoiY2pucml1cjQzMDgyZzN2bGxhZjl4aHV2eSJ9.OZvYlGNGkHUEW_xUX9BNNA</string>
     <string name="start_navigating">Start Navigating</string>
     <!--<string name="action_settings">Settings</string>-->
