--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,13 @@
     <string name="title_home">Home</string>
     <string name="title_map">Map</string>
     <string name="title_bank">Bank</string>
-    <!--<string name="start_navigating">Start Navigating</string>-->
-    <!--<string name="action_settings">Settings</string>-->
+
+
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="login_title">Login</string>
+    <string name="create_act">Create Account</string>
+    <string name="send_email_to_reset_password">Send email to reset password</string>
 </resources>
